@@ -121,7 +121,7 @@
   <string id="188">全部选择</string>
   <string id="189">查找媒体信息</string>
   <string id="190">保存</string>
-  <string id="191">打乱次序</string>
+  <string id="191">随机</string>
   <string id="192">清除</string>
   <string id="193">查找</string>
   <string id="194">查找…</string>
@@ -157,7 +157,7 @@
   <string id="224">速度</string>
   <string id="225">特效过渡时间</string>
   <string id="226">开启 PAL60</string>
-  <string id="227">开启 CDDB</string>
+  <string id="227">开启 freedb 查询音乐CD的信息</string>
   <string id="228">随机播放列表</string>
   <string id="229">关闭硬盘 空闲时间(分)</string>
   <string id="230">滤镜</string>
@@ -172,7 +172,7 @@
   <string id="239">播放完成后清除列表</string>
   <string id="240">自动运行 DVD-视频</string>
   <string id="241">自动运行 VCD/SVCD</string>
-  <string id="242">自动运行 Audio-CD</string>
+  <string id="242">自动运行 音乐-CD</string>
   <string id="243">自动运行 游戏光盘</string>
   <string id="244">自动运行 视频文件</string>
   <string id="245">自动运行 音乐文件</string>
@@ -182,13 +182,13 @@
   <string id="249">音乐</string>
   <string id="250">视觉效果</string>
   <string id="251">选择目的目录</string>
-  <string id="252">立体声输出到所有扬声器</string>
+  <string id="252">双声道时输出到所有扬声器</string>
   <string id="253">频道</string>
   <string id="254">- DD立体数码音效</string>
   <string id="255">CDDB</string>
   <string id="256">从 CDDB 读取信息</string>
   <string id="257">错误</string>
-  <string id="258">开启ID3标签</string>
+  <string id="258">开启读取标签</string>
   <string id="259">开始</string>
   <string id="260">快捷</string>
   <string id="261">等待开始…</string>
@@ -207,12 +207,12 @@
   <string id="274">字幕位置</string>
   <string id="275">像素比值调整</string>
   <string id="276">移动箭头改变边框</string>
-  <string id="277">移动线条改变字幕的位置</string>
+  <string id="277">改变字幕位置</string>
   <string id="278">变动方块使其完美</string>
   <string id="279">不能读取设置</string>
   <string id="280">使用默认fallbacks</string>
   <string id="281">请检查 .xml 文件</string>
-  <string id="282">找到%i条</string>
+  <string id="282">找到 %i 条</string>
   <string id="283">查找结果</string>
   <string id="284">无结果</string>
   <string id="285">反交错滤镜</string>
@@ -220,7 +220,7 @@
   <string id="287">字幕</string>
   <string id="288">字体</string>
   <string id="289">- 尺寸</string>
-  <string id="290">动态压缩</string>
+  <string id="290">缩短大小声差距</string>
   <string id="291">视频</string>
   <string id="292">音频</string>
   <string id="293">字幕</string>
@@ -236,14 +236,14 @@
   <string id="304">语言</string>
   <string id="305">开启</string>
   <string id="306">非隔行扫瞄</string>
-  <string id="307">- 自动后处理</string>
+  <string id="307">- 自动执行后处理</string>
   <string id="308">- 垂直分块滤镜</string>
   <string id="309">- 水平分块滤镜</string>
-  <string id="310">- 自动亮度/对比度</string>
+  <string id="310">- 自动亮度/对比</string>
   <string id="311">- 消除瑕疵</string>
   <string id="312">(0=自动)</string>
   <string id="313">清除数据库</string>
-  <string id="314">准备…</string>
+  <string id="314">准备中…</string>
   <string id="315">数据库错误！</string>
   <string id="316">清除歌曲…</string>
   <string id="317">成功清除数据库！</string>
@@ -257,7 +257,7 @@
   <string id="325">清除路径错误！</string>
   <string id="326">清除专辑…</string>
   <string id="327">清除专辑错误！</string>
-  <string id="328">写入…</string>
+  <string id="328">写入中…</string>
   <string id="329">写入错误！</string>
   <string id="330">这需要一些时间…</string>
   <string id="331">压缩数据库中…</string>
@@ -290,7 +290,7 @@
   <string id="358">全部专辑</string>
   <string id="359">新的专辑</string>
   <string id="360">屏幕保护</string>
-  <string id="361">幻灯片[循环]</string>
+  <string id="361">搜寻并播放</string>
   <string id="362">屏幕保护衰减级别(%)</string>
   <string id="363">排序：文件</string>
   <string id="364">- AC3/DTS数码音效</string>
@@ -396,11 +396,11 @@
   <string id="465">对比度</string>
   <string id="466">伽码</string>
   <string id="467">类型</string>
-  <string id="468">移动线条改变播放工具条位置</string>
+  <string id="468">改变播放工具条位置</string>
   <string id="469">播放工具位置</string>
   <string id="470">改机者</string>
   <string id="471">改机芯片</string>
-  <string id="472">视频播放工具条 超时</string>
+  <string id="472">播放工具条 超时</string>
   <string id="473">高质量取样</string>
   <string id="474">关</string>
   <string id="475">只有音乐</string>
@@ -439,12 +439,12 @@
   <string id="508">不使用捷径及扫瞄</string>
   <string id="509">缓存程序图标</string>
   <string id="510">开启可视化效果</string>
-  <string id="511">启用视频模式自动切换功能</string>
+  <string id="511">启用视频模式自动切换</string>
   <string id="512">启动界面</string>
   <string id="513">主界面</string>
   <string id="514">设置界面</string>
   <string id="515">流派</string>
-  <string id="516">文档管理</string>
+  <string id="516">透通式文件管理</string>
   <string id="517">最近播放的专辑</string>
   <string id="518">运行</string>
   <string id="519">运行方式</string>
@@ -468,9 +468,9 @@
   <string id="604">固定码率</string>
   <string id="605">压缩…</string>
   <string id="606">音轨序号：</string>
-  <string id="607">到：</string>
+  <string id="607">储存到：</string>
   <string id="608">不能压缩CD或音轨</string>
-  <string id="609">CD压缩路径没有设置在XboxMediaCenter.xml</string>
+  <string id="609">CD压缩路径在XboxMediaCenter.xml没有设置</string>
   <string id="620">压缩音乐CD</string>
   <string id="621">编码器</string>
   <string id="622">质量</string>
@@ -479,7 +479,7 @@
   <string id="625">所有歌曲</string>
   <string id="629">显示模式</string>
   <string id="630">标准</string>
-  <string id="631">放缩以填满屏幕</string>
+  <string id="631">填满屏幕</string>
   <string id="632">拉伸为 4:3</string>
   <string id="633">拉伸为 14:9</string>
   <string id="634">拉伸为 16:9</string>
@@ -489,8 +489,8 @@
   <string id="638">回放增益模式</string>
   <string id="639">使用音轨增益等级</string>
   <string id="640">使用专辑增益等级</string>
-  <string id="641">前级放大器音量 - 重复播放的文件</string>
-  <string id="642">前级放大器音量 - 不重复播放的文件</string>
+  <string id="641">音量 - 重复播放的文件</string>
+  <string id="642">音量 - 不重复播放的文件</string>
   <string id="643">播放增益时忽略消波失真</string>
   <string id="644">修剪黑边</string>
   <string id="645">需要缓存一个大文件，是否继续？</string>
@@ -545,7 +545,7 @@
   <string id="747">图像载入错误</string>
   <string id="748">编辑路径</string>
   <string id="749">添加共享</string>
-  <string id="750">确定吗？</string>
+  <string id="750">确定？</string>
   <string id="751">移除共享</string>
   <string id="752">编辑共享路径</string>
   <string id="753">编辑共享名称</string>
@@ -565,11 +565,11 @@
   <string id="767">保留</string>
   <string id="768">保留</string>
   <string id="769">保留</string>
-  <string id="770">错误%i：不能共享</string>
-  <string id="771">FTP 服务器限定工作在FATX格式</string>
+  <string id="770">错误 %i：不能共享</string>
+  <string id="771">- FTP 服务器限定工作在FATX格式</string>
   <string id="772">音频硬件</string>
   <string id="773">搜索中</string>
-  <string id="774">幻灯片文件夹</string>
+  <string id="774">图片文件夹</string>
   <string id="998">XLink KAI</string>
   <string id="999">在线游戏</string>
   <string id="1000">屏幕保护预览</string>
@@ -592,7 +592,7 @@
   <string id="1017">输入服务器远程路径</string>
   <string id="1018">输入端口号</string>
   <string id="1019">输入账号</string>
-  <string id="1020">添加%s目录</string>
+  <string id="1020">添加 %s 目录</string>
   <string id="1021">输入或选择目录。</string>
   <string id="1022">为该目录命名。</string>
   <string id="1023">浏览目录</string>
@@ -600,11 +600,11 @@
   <string id="1025">无法获得目录信息。</string>
   <string id="1026">添加目录</string>
   <string id="1027">编辑目录</string>
-  <string id="1028">编辑%s目录</string>
+  <string id="1028">编辑 %s 目录</string>
   <string id="1029">输入新的标签</string>
   <string id="1030">镜像</string>
   <string id="1031">镜像目录</string>
-  <string id="1032">添加一个网上邻居</string>
+  <string id="1032">添加网上邻居…</string>
   <string id="1200">SMB 共享设置</string>
   <string id="1202">SMB 工作组</string>
   <string id="1203">SMB 账号</string>
@@ -674,8 +674,8 @@
   <string id="10007">系统信息</string>
   <string id="10008">设置-&gt;一般</string>
   <string id="10009">设置-&gt;屏幕</string>
-  <string id="10010">设置-&gt;用户界面-&gt;界面 校准</string>
-  <string id="10011">设置-&gt;我的视频-&gt;屏幕 校准</string>
+  <string id="10010">设置-&gt;用户界面-&gt;界面校准</string>
+  <string id="10011">设置-&gt;我的视频-&gt;屏幕校准</string>
   <string id="10012">设置-&gt;我的图片</string>
   <string id="10013">设置-&gt;我的程序</string>
   <string id="10014">设置-&gt;天气预报</string>
@@ -696,7 +696,7 @@
   <string id="10500">我的音乐/播放列表</string>
   <string id="10501">我的音乐/文件</string>
   <string id="10502">我的音乐/音乐库</string>
-  <string id="10503">我的音乐/排行前 100</string>
+  <string id="10503">我的音乐/排行前100</string>
   <string id="10504">排行前 100 歌曲</string>
   <string id="10505">排行前 100 专辑</string>
   <string id="10506">我的程序</string>
@@ -710,17 +710,17 @@
   <string id="10514">我的音乐 - 流派</string>
   <string id="10515">我的音乐 - 排行前 100</string>
   <string id="10516">我的音乐 - 资料</string>
-  <string id="10517">我的音乐 - 正在播放的...</string>
+  <string id="10517">我的音乐 - 正在播放</string>
   <string id="10518">我的视频 - 演员</string>
   <string id="10519">我的视频 - 流派</string>
   <string id="10520">我的视频 - 标题</string>
   <string id="10521">我的视频 - 年份</string>
-  <string id="10522">我的视频 - 播放列表</string>
+  <string id="10522">我的视频 - 正在播放</string>
   <string id="10523">专辑信息</string>
   <string id="10524">影片信息</string>
-  <string id="12000">选择对话框</string>
+  <string id="12000">选择</string>
   <string id="12001">我的音乐/信息</string>
-  <string id="12002">确认对话框</string>
+  <string id="12002">确认</string>
   <string id="12003">我的视频/信息</string>
   <string id="12004">我的脚本/信息</string>
   <string id="12005">全屏视频</string>
@@ -817,6 +817,7 @@
   <string id="12385">日/月</string>
   <string id="12386">月/日</string>
   <string id="12387">重新生成数据库</string>
+  <string id="12388">管理员</string>
   <string id="12390">系统启动时间</string>
   <string id="12391">分钟</string>
   <string id="12392">小时</string>
@@ -824,7 +825,7 @@
   <string id="12394">累计开机时间</string>
   <string id="12600">我的天气</string>
   <string id="12900">屏幕保护</string>
-  <string id="12901">全屏 OSD</string>
+  <string id="12901">全屏画面调整</string>
   <string id="13000">系统</string>
   <string id="13001">立即关闭硬盘</string>
   <string id="13002">只有视频</string>
@@ -855,11 +856,11 @@
   <string id="13169">忽略CD选择器</string>
   <string id="13170">从不</string>
   <string id="13171">立即</string>
-  <string id="13172">隔%i秒以后</string>
+  <string id="13172">隔 %i 秒以后</string>
   <string id="13200">预存设置</string>
-  <string id="13201">删除预存设置'%s'？</string>
+  <string id="13201">删除预存设置 '%s'？</string>
   <string id="13202">保存当前设置为预存设置…</string>
-  <string id="13203">预存设置'%s'载入成功</string>
+  <string id="13203">预存设置 '%s' 载入成功</string>
   <string id="13204">最近载入的预存设置：</string>
   <string id="13205">未知</string>
   <string id="13206">覆盖</string>
@@ -895,7 +896,7 @@
   <string id="13290">XBOX 生产商：</string>
   <string id="13291">改机芯片：</string>
   <string id="13292">A/V 线：</string>
-  <string id="13293">视频&amp;XBE 区域：</string>
+  <string id="13293">视频&amp;游戏区域：</string>
   <string id="13294">DVD 区域：</string>
   <string id="13295">互联网：</string>
   <string id="13296">Xbox已连接！</string>
@@ -903,8 +904,8 @@
   <string id="13298">XBLIVE 钥匙：</string>
   <string id="13299">目标温度</string>
   <string id="13300">风扇转速</string>
-  <string id="13301">自动温度控制</string>
-  <string id="13302">手动控制风扇转速</string>
+  <string id="13301">自动控温</string>
+  <string id="13302">指定风扇转速</string>
   <string id="13303">皮肤字体</string>
   <string id="13304">开启转换双向字串</string>
   <string id="13305">启用聚合新闻RSS显示</string>
@@ -919,8 +920,8 @@
   <string id="13314">平滑转换</string>
   <string id="13315">创建缩略图</string>
   <string id="13316">循环缩略图</string>
-  <string id="13317">观看幻灯片</string>
-  <string id="13318">循环幻灯片</string>
+  <string id="13317">观看图片</string>
+  <string id="13318">循环图片</string>
   <string id="13319">随机播放</string>
   <string id="13320">立体声</string>
   <string id="13321">左声道</string>
@@ -930,9 +931,9 @@
   <string id="13325">前景透明度</string>
   <string id="13326">影音延迟</string>
   <string id="13327">卡拉OK</string>
-  <string id="13328">%s未找到</string>
-  <string id="13329">打开%s时发生错误</string>
-  <string id="13330">无法载入%s</string>
+  <string id="13328">%s 未找到</string>
+  <string id="13329">打开 %s 时发生错误</string>
+  <string id="13330">无法载入 %s</string>
   <string id="13331">错误：内存不足！</string>
   <string id="13332">上移</string>
   <string id="13333">下移</string>
@@ -983,7 +984,7 @@
   <string id="13378">默认亮度数值</string>
   <string id="13379">默认对比度数值</string>
   <string id="13380">默认伽码数值</string>
-  <string id="13381">从书签处开始播放</string>
+  <string id="13381">接续播放视频</string>
   <string id="13382">语音特效 - 端口 1</string>
   <string id="13383">语音特效 - 端口 2</string>
   <string id="13384">语音特效 - 端口 3</string>
@@ -996,7 +997,7 @@
   <string id="13390">没有设定
 该视觉效果</string>
   <string id="13391">弹出/载入</string>
-  <string id="13392">在播放音乐时自动启用可视化效果</string>
+  <string id="13392">播放音乐时启用可视化效果</string>
   <string id="13393">计算大小</string>
   <string id="13394">计算文件夹大小</string>
   <string id="13395">视频设置</string>
@@ -1005,7 +1006,7 @@
   <string id="13398">书签</string>
   <string id="13399">排序时忽略 The 开头名称</string>
   <string id="13400">专辑音轨平滑转换</string>
-  <string id="13401">浏览%s</string>
+  <string id="13401">浏览 %s</string>
   <string id="13402">显示音轨位置</string>
   <string id="13403">清除为缺省值</string>
   <string id="13404">恢复</string>
@@ -1049,15 +1050,15 @@
   <string id="14038">网络设置已改变</string>
   <string id="14039">XBMC需要重启改变你的网络设置。</string>
   <string id="14040">你想现在就重启吗？</string>
-  <string id="14041">后处理</string>
-  <string id="14042">执行XLink Kai的IP地址</string>
+  <string id="14041">后置处理</string>
+  <string id="14042">主机IP地址</string>
   <string id="14043">- 播放时关机</string>
-  <string id="14044">%i分</string>
-  <string id="14045">%i秒</string>
-  <string id="14046">%i毫秒</string>
-  <string id="14047">%i%%</string>
-  <string id="14048">%ikbps</string>
-  <string id="14049">%ikb</string>
+  <string id="14044">%i 分</string>
+  <string id="14045">%i 秒</string>
+  <string id="14046">%i 毫秒</string>
+  <string id="14047">%i %%</string>
+  <string id="14048">%i kbps</string>
+  <string id="14049">%i kb</string>
   <string id="14050">%i.0 dB</string>
   <string id="14051">时间显示格式</string>
   <string id="14052">日期显示格式</string>
@@ -1086,11 +1087,11 @@
   <string id="15001">目前并没有连线到运行XLink Kai的电脑</string>
   <string id="15002">请确定设定无误后再尝试连线？</string>
   <string id="15003">输入你的讯息</string>
-  <string id="15004">你被邀请玩%s。</string>
+  <string id="15004">你被邀请玩 %s。</string>
   <string id="15005">日期：%s</string>
   <string id="15006">来自：%s</string>
   <string id="15007">邀请</string>
-  <string id="15008">你被邀请加入%s。</string>
+  <string id="15008">你被邀请加入 %s。</string>
   <string id="15009">离线</string>
   <string id="15010">好友</string>
   <string id="15011">显示：好友</string>
@@ -1125,8 +1126,8 @@
   <string id="15040">放入游戏碟片或按 A 取消</string>
   <string id="15041">和开启游戏手册。</string>
   <string id="15042">存取被拒</string>
-  <string id="15043">%s加入聊天室。</string>
-  <string id="15044">%s离开聊天室。</string>
+  <string id="15043">%s 加入聊天室。</string>
+  <string id="15044">%s 离开聊天室。</string>
   <string id="15045">输入你的讯息。</string>
   <string id="15046">目前游戏室</string>
   <string id="15047">输入游戏场密码。</string>
@@ -1158,24 +1159,24 @@
   <string id="15110">手柄振动</string>
   <string id="15111">皮肤主题</string>
   <string id="15112">缺省主题</string>
-  <string id="15200">LastFM</string>
-  <string id="15201">将歌曲提交到 LastFM</string>
-  <string id="15202">LastFM 用户名</string>
-  <string id="15203">LastFM 密码</string>
+  <string id="15200">Last.FM</string>
+  <string id="15201">将歌曲提交到 Last.FM</string>
+  <string id="15202">Last.FM 用户名</string>
+  <string id="15203">Last.FM 密码</string>
   <string id="15204">无法连接：休眠中…</string>
   <string id="15205">请升级XBMC</string>
   <string id="15206">上传失败：无法通过认证。</string>
   <string id="15207">连接</string>
   <string id="15208">无法连接</string>
-  <string id="15209">上传进度%i</string>
-  <string id="15210">已上传%i首歌曲</string>
+  <string id="15209">上传进度 %i</string>
+  <string id="15210">已上传 %i 首歌曲</string>
   <string id="15211">上传中…</string>
-  <string id="15212">上传剩余%i秒</string>
+  <string id="15212">上传剩余 %i 秒</string>
   <string id="15213">打开方式</string>
   <string id="15214">使用平滑的影音同步</string>
   <string id="15215">缩略图显示时隐藏文件名</string>
-  <string id="15250">提交 Last.fm 电台到LastFM</string>
-  <string id="15251">连接到 Last.fm…</string>
+  <string id="15250">提交 Last.FM 电台到 Last.FM</string>
+  <string id="15251">连接到 Last.FM…</string>
   <string id="15252">选择电台…</string>
   <string id="15253">寻找相似的艺术家…</string>
   <string id="15254">寻找相似的标记…</string>
@@ -1203,8 +1204,8 @@
   <string id="15276">收听 %name% 的同好 last.fm 电台</string>
   <string id="15277">收听 %name% 的个人 last.fm 电台</string>
   <string id="15278">收听 %name% 的最爱歌曲</string>
-  <string id="15279">正在从last.fm获取列表</string>
-  <string id="15280">不能从last.fm获取列表…</string>
+  <string id="15279">正在从last.fm 获取列表</string>
+  <string id="15280">不能从last.fm 获取列表…</string>
   <string id="15281">输入艺术家名字来寻找相关资料</string>
   <string id="15282">输入标记来寻找其他相似的</string>
   <string id="15283">%name% 最近听过的音轨</string>
